# homelab-hub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: bookmarks.html  database.py  main.py  models.py  schemas.py
app/routes/: bookmarks.py  categories.py  images.py  notes.py  pages.py  recipes.py  tasks.py  vax.py
app/templates/: base.html  bookmarks.html  dashboard.html  dogvax.html  note_detail.html  note_group.html  note_unlock.html  notes.html  recipe_detail.html  recipe_form.html  recipes.html  task_detail.html  task_form.html  tasks.html
app/templates/partials/: archived_card.html  task_card.html
app/widgets/: __init__.py  base.py  providers.py
scripts/: migrate.py
