[project]
name = "homelab-hub"
version = "1.0.0"
description = "Unified self-hosted home dashboard: maintenance tasks, project notes, and dog vaccine tracking"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "pydantic>=2.10.0",
    "python-dateutil>=2.9.0.post0",
    "pillow>=11.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
